--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.8",
     "aos": "^2.3.4",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.451.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
