--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.1.8",
     "aos": "^2.3.4",
+    "framer-motion": "^11.13.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.451.0",
     "react": "^18.3.1",
