--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "@mui/material": "^6.1.8",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^11.13.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.451.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
