--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.1.8",
+    "@vercel/analytics": "^1.4.1",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "canvas-confetti": "^1.9.3",
